# engine-revival

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
accessions/: alias-autodesk-acquisition-record-public-reference.json  aqsis-renderer-source-planned.json  aqsis-renderer-tooling-metadata-public-reference.json  brender-3dmm-source-planned.json  brender-preservation-index-public-reference.json  brender-v132-source-planned.json  coin3d-open-inventor-api-compatibility-public-reference.json  crystal-space-github-source-repository-planned.json  crystal-space-sourceforge-project-record-public-reference.json  direct3d-directx2-release-record-public-reference.json  directx-sdk-legacy-samples-archive-planned.json  gool-andy-gavin-developer-article-public-reference.json  iris-gl-opengl-history-record-public-reference.json  japan-studio-restructure-public-report-public-reference.json  lithtech-jupiter-build51-archive-item-metadata-only.json  lithtech-jupiter-development-guide-public-reference.json  mesa-license-and-api-summary-public-reference.json  mesa-source-repository-planned.json  net-yaroze-documentation-set-public-reference.json  ogre-licensing-record-public-reference.json  ogre-source-repository-planned.json  open-inventor-readme-first-build-notes-public-reference.json  open-inventor-source-release-planned.json  opengl-performer-getting-started-guide-30-public-reference.json  opengl-performer-product-brochure-public-reference.json  opengl-performer-programmers-guide-32-public-reference.json  opengl-registry-spec-anchor-public-reference.json  (+33 more)
(+377 files in other folders)
