[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engine-revival"
version = "0.1.0"
description = "Public tooling spine for historical engine, SDK, and rendering-library revival records."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["game-engines", "preservation", "archives", "provenance", "rendering"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
engine-revival = "engine_revival.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
